# siaod

./: CMakeLists.txt  dim1dynamic_arr.cpp  dim1static_arr.cpp  dim1vector_arr.cpp  header.h  main.cpp  readme.md
READY CPP FILES/zad_1/: dim1dynamic_arr.cpp  dim1static_arr.cpp  dim1vector_arr.cpp
READY CPP FILES/zad_10/: str_match.cpp  str_search.cpp
READY CPP FILES/zad_2/: dim2dynamic_arr.cpp  dim2static_arr.cpp  dim2vector_arr.cpp
READY CPP FILES/zad_3/: c_strings.cpp  cpp_strings.cpp
READY CPP FILES/zad_4/: TableDynamic2.cpp  TableDynamic2.h  TableStatic1.cpp  TableStatic1.h  TableVector3.cpp  TableVector3.h
READY CPP FILES/zad_5/: linked_list.cpp
READY CPP FILES/zad_6/: recursion_combs.cpp  recursion_list.cpp
READY CPP FILES/zad_7/: calc.cpp
READY CPP FILES/zad_8/: insert_sort.cpp  shaker_sort.cpp  stooge_sort.cpp
READY CPP FILES/zad_9/: search1.cpp
